# Licenta

./: DFS-test-commands.txt  Found problems.txt  Notes.txt  TODO.txt  test-commands.txt
DFS_Client/: build.gradle  settings.gradle
DFS_Client/src/main/java/com/dfs/DFS_Client/: DfsClientApplication.java  Interface.java
DFS_Client/src/main/java/com/dfs/DFS_Client/clients/: AuthenticationClient.java  DirectoryClient.java  DriveClient.java
DFS_Client/src/main/java/com/dfs/DFS_Client/models/: AuthenticationPayload.java  CreateDirectoryPayload.java  CreateLocalDrivePayload.java  DeletePayload.java  DirectoryMetadata.java  DirectoryType.java  FileHashPayload.java  FileHashResponse.java  LocalUserData.java  Pair.java  ReadFilePayload.java  ReadResponse.java  ServerUserData.java  Status.java  UserData.java  WriteFilePayload.java
DFS_Client/src/main/java/com/dfs/DFS_Client/services/: DirectoryService.java  DriveService.java  LocalDriveHandler.java
DFS_Client/src/main/resources/: application.properties
DFS_Server/: build.gradle  settings.gradle
DFS_Server/src/main/java/com/dfs/server/: DfsServerApplication.java
DFS_Server/src/main/java/com/dfs/server/controllers/: AuthenticationController.java  DirectoryController.java  DriveController.java
DFS_Server/src/main/java/com/dfs/server/models/: AuthenticationPayload.java  CreateDirectoryPayload.java  CreateLocalDrivePayload.java  DeletePayload.java  DirectoryMetadata.java  DirectoryType.java  FileHashPayload.java  FileHashResponse.java  Pair.java  ReadFilePayload.java  ReadResponse.java  ServerUserData.java  Status.java  UserData.java  (+2 more)
DFS_Server/src/main/resources/: application.properties
DiskEmulationLib/: CMakeLists.txt
DiskEmulationLib/include/: disk.h  diskCodes.h  diskInitialization.h  diskUtils.h
DiskEmulationLib/src/: disk.cpp  diskInitialization.cpp  diskUtils.cpp  main.cpp
Documentatie/Images/: 2.4.psd  2.6.psd  2.7.psd
Documentatie/Licenta-overleaf/: 0.1-titlu.tex  0.2-rezumat + abstract.tex  1-introducere.tex  2-implementare.tex  3-comparare.tex  main.tex
Ext2/: CMakeLists.txt
Ext2/cmake/: FindDiskEmulation.cmake
Ext2/include/: ext2.h  ext2Api.h  ext2Attributes.h  ext2BlocksAllocation.h  ext2FunctionUtils.h  ext2Init.h  ext2RootInit.h  ext2Structures.h  ext2TestApi.h  ext2Utils.h  interface.h  structures.h  utils.h
Ext2/include/codes/: ext2ApiResponseCodes.h  ext2Attributes.h  ext2BlocksAllocationCodes.h  ext2Codes.h
Ext2/src/: ext2.cpp  ext2Api.cpp  ext2BlocksAllocation.cpp  ext2FunctionUtils.cpp  ext2Heuristics.cpp  ext2Init.cpp  ext2RootInit.cpp  ext2TestApi.cpp  ext2Utils.cpp  interface.cpp  main.cpp  utils.cpp
FAT32/: CMakeLists.txt  fin.txt  main.cpp
FAT32/asm/: bootSector.asm
FAT32/cmake/: FindDiskEmulation.cmake
FAT32/include/: Utils.h  fat32.h  fat32Api.h  fat32Attributes.h  fat32Codes.h  fat32Exceptions.h  fat32FunctionUtils.h  fat32FunctionsUtils.h  fat32Init.h  fat32MethodUtils.h  fat32TestApi.h  fat32Utils.h  interface.h  utils.h
FAT32/include/codes/: fat32ApiResponseCodes.h  fat32Attributes.h  fat32Codes.h
FAT32/src/: Utils.cpp  fat32.cpp  fat32Api.cpp  fat32Exceptions.cpp  fat32FunctionUtils.cpp  fat32FunctionsUtils.cpp  fat32Init.cpp  fat32MethodUtils.cpp  fat32TestApi.cpp  fat32Utils.cpp  interface.cpp  main.cpp  utils.cpp
HFS+/: CMakeLists.txt
HFS+/include/: bTreeCatalog.h  hfs.h  hfsApi.h  hfsFunctionUtils.h  hfsInit.h  hfsTestApi.h  interface.h  structures.h  utils.h
HFS+/include/catalog_file/: bTreeCatalog.h  catalogFileOperations.h  catalogFileUtils.h
HFS+/include/catalog_file/codes/: bTreeResponseCodes.h  catalogFileResponseCodes.h
HFS+/include/codes/: bTreeResponseCodes.h  hfsApiResponseCodes.h  hfsAttributes.h  hfsCodes.h
HFS+/include/extents_file/: bTreeCatalog.h  extentsFileOperations.h  extentsFileUtils.h
HFS+/include/extents_file/codes/: bTreeResponseCodes.h
HFS+/src/: bTreeCatalog.cpp  hfs.cpp  hfsApi.cpp  hfsFunctionUtils.cpp  hfsTestApi.cpp  hsfInit.cpp  interface.cpp  main.cpp  utils.cpp
HFS+/src/catalog_file/: bTreeCatalog.cpp  catalogFileOperations.cpp  catalogFileUtils.cpp
HFS+/src/extents_file/: bTreeCatalog.cpp  extentsFileOperations.cpp  extentsFileUtils.cpp
HardDisk/: Metadata  sector_0  sector_1  sector_2  sector_3
Libraries/DiskEmulation/include/: disk.h  diskCallsResponse.h  diskUtils.h
Libraries/Ext2/include/: ext2.h  ext2Api.h  ext2BlocksAllocation.h  ext2FunctionUtils.h  ext2Heuristics.h  ext2RootInit.h  interface.h  utils.h
Libraries/Ext2/include/codes/: ext2ApiResponseCodes.h  ext2Attributes.h  ext2BlocksAllocationCodes.h  ext2Codes.h
Libraries/FAT32/include/: fat32Api.h  fat32Attributes.h  fat32FunctionUtils.h  fat32Init.h  fat32Structures.h  fat32TestApi.h  interface.h  structures.h  utils.h
Libraries/FAT32/include/codes/: fat32ApiResponseCodes.h  fat32Codes.h
Libraries/HFS/include/: hfsApi.h  hfsFunctionUtils.h  hfsInit.h  hfsStructures.h  interface.h  utils.h
Libraries/HFS/include/catalog_file/: bTreeCatalog.h  catalogFileOperations.h  catalogFileUtils.h
Libraries/HFS/include/catalog_file/codes/: bTreeResponseCodes.h  catalogFileResponseCodes.h
Libraries/HFS/include/codes/: hfsApiResponseCodes.h  hfsAttributes.h  hfsCodes.h
Libraries/HFS/include/extents_file/: bTreeCatalog.h  extentsFileOperations.h  extentsFileUtils.h
Libraries/HFS/include/extents_file/codes/: bTreeResponseCodes.h  extentsFileResponseCodes.h
TestingProgram/: CMakeLists.txt  main.cpp
TestingProgram/cmake/: FindExt2.cmake  FindFAT32.cmake  FindHFS.cmake
TestingProgram/include/: attributes.h  commonTests.h  ext2Tests.h  fat32Tests.h  hfsTests.h  tests.h  utils.h
TestingProgram/include/space_tests/: ext2SpaceTests.h  fat32SpaceTests.h  hfsSpaceTests.h
TestingProgram/include/time_tests/: ext2TimeTests.h  fat32TimeTests.h  hfsTimeTests.h
TestingProgram/src/: commonTests.cpp  ext2Tests.cpp  fat32Tests.cpp  hfsTests.cpp  tests.cpp  utils.cpp
TestingProgram/src/space_tests/: ext2SpaceTests.cpp  fat32SpaceTests.cpp  hfsSpaceTests.cpp
TestingProgram/src/time_tests/: ext2TimeTests.cpp  fat32TimeTests.cpp  hfsTimeTests.cpp
(+5 files in other folders)
